objects/redwing__ILT_Instructor__c.object
<CustomObject>
    <fields>
        <fullName>redwing__ILT_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the ILT Class to which ILT instructor is assigned</description>
        <label>ILT Class</label>
        <referenceTo>redwing__ILT_Class__c</referenceTo>
        <relationshipName>ILT_Instructors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__ILT_Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the ILT Session to which ILT instructor is assigned</description>
        <label>ILT Session</label>
        <referenceTo>redwing__ILT_Session__c</referenceTo>
        <relationshipName>ILT_Instructors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Instructor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the ILT Instructor</description>
        <label>Instructor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ILT_Instructors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If there are multiple ILT Instructors per one ILT Class, one can be selected as primary. For vILT Sessions, primary instructor will be selected as co-organizer and will receive a link to start the vILT Session</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>ILT Instructor</label>
    <nameField>
        <displayFormat>ILTI-{0000000}</displayFormat>
        <label>ILT Instructor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ILT Instructors</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>redwing__Class_Or_Session_Checking</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(ISBLANK(redwing__ILT_Class__c),ISBLANK(redwing__ILT_Session__c)),AND(NOT(ISBLANK(redwing__ILT_Class__c)),NOT(ISBLANK(redwing__ILT_Session__c))))</errorConditionFormula>
        <errorMessage>Instructor should be assigned to ILT Class or ILT Session</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>redwing__Primary_On_Session_Checking</fullName>
        <active>true</active>
        <errorConditionFormula>AND(redwing__Primary__c, NOT(ISBLANK(redwing__ILT_Session__c)))</errorConditionFormula>
        <errorMessage>Primary Instructor can be selected for ILT Class only</errorMessage>
    </validationRules>
</CustomObject>